# buycott-app

./: .env  .env.example  Makefile  README.md  docker-compose.yml  roadmap.md  subagents  test2.session.sql
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/db/: models.py  session.py
backend/app/phase0_identity_lock/: api_guard.py  constraints.py  ontology_guard.py  policy.py  schema_guard.py
backend/app/phase1_semantic_pipeline/: embeddings.py  ontology.py  search.py
backend/app/phase2_transparency_ux/: accessibility.py  capabilities.py  evidence.py  suggestions.py  transparency.py
backend/app/routes/: search.py
backend/app/schemas/: api.py
backend/app/services/: business_model_service.py  distance_service.py  embedding_service.py  ontology_service.py  search_service.py  time_service.py
backend/app/services/phase6/: __init__.py  agents.py  contracts.py  graph_utils.py  pipeline.py  search_service.py  taxonomy.py  utils.py
backend/app/telemetry/: __init__.py  instrumentation.py  logging_utils.py  middleware.py  repository.py  trace.py
backend/scripts/: init_db.py  seed_all.py  seed_businesses.py  seed_ontology.py  wait_for_db.py
backend/tests/: test_business_model_service.py  test_distance_service.py  test_openclaw_phase5_components.py  test_phase0_phase1_phase2.py  test_phase6_semantic_architecture.py  test_time_service.py
blueprints/: README.md  phase-summary.md  (+1 more)
database/: schema.sql
(+84 files in other folders)
