[project]
name = "buycott-backend"
version = "0.1.0"
description = "Buycott semantic geographic capability index backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.5",
  "pydantic-settings>=2.4.0",
  "python-dateutil>=2.9.0",
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "orjson>=3.10.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
